@@ -1,6 +1,9 @@
 AUX 50yasnippet-gentoo.el 249 RMD160 b28496f99abad7795b8dbedd799b0b46c3acc3e8 SHA1 6b1a238ad05aa75633143e37b646d5fbfde2099d SHA256 36aedd7a123c4228fcbe2bce95989baf02b35bb60b299a17c9ad6c554c76fa51
 DIST yasnippet-0.4.4.tar.bz2 15536 RMD160 75a7a3c33d19ef44a0fc92bbd3cd93ef59554e91 SHA1 28ce9e4d9a8a5b77c6ff6b16d736df3a72e52fdf SHA256 76948dbe9cdd9356b83837de9ac85a136a5b5733a7acd1fe32ab8cba1d01a9ae
+DIST yasnippet-0.5.2.tar.bz2 18337 RMD160 26a35254cd697e2f6488da636601d97ab434056c SHA1 23892a7a327097abad60e6a99fe556b2548c1adc SHA256 b607930a955fbd574fd7ea3f114bf073fac07a534575d542d2be751b0276e2b6
 DIST yasnippet-doc-0.4.4.tar.bz2 98996 RMD160 c16d53c58a9ff8762d98d41a67586e3ca9c93725 SHA1 6ca23ef8061bd6fded25c2fea4dd5229e1e409bf SHA256 80905a26d8ae26b2be06640842c4975b6e791d5d1b84c30f85e5f030bf772434
+DIST yasnippet-doc-0.5.2.tar.bz2 106225 RMD160 0e43283c6ef370b71f907b6f3c764e5cdb34307e SHA1 a619c095c6198d2e400ea76e3196ee2d0e077ff4 SHA256 fddefc03b1f703a47e80a34a7aded663046019435ed6a67fc0d5913d32b18148
 EBUILD yasnippet-0.4.4.ebuild 911 RMD160 aa760d27f3d5d4d44da0614e4263af7c8ed4edfb SHA1 e6acd0d492cd86fb0e16ecce3da2f4d060493040 SHA256 d265330b50162e5ff989d499f8df8e19b4fd031908a81bb3ddbb445a4bfbb327
-MISC ChangeLog 345 RMD160 35b3c1e47136f3f3d87cdbb7b57ba39c83f51631 SHA1 c963976dc89258797ad8e116bd7084561b203115 SHA256 48450ac4b1477fe0b2db15d75492e23fd77b75490d2cc9fe40b07395208c4cf9
+EBUILD yasnippet-0.5.2.ebuild 1139 RMD160 5b49d83dfad17ca85ab69d861cc937184a257a7a SHA1 5060cac16fc8c0e70174c78894c4ead5c44f83ca SHA256 058411e058b964539648f926ca01e2f721a3bbfa54badf95823f04b554b225c5
+MISC ChangeLog 603 RMD160 f1f5153c1951646d888e9ceadc3dbd0684fab68b SHA1 f4455d056fbfae79e1a032059f366bb381d21f9a SHA256 7c857efa33acfa6314f36cbad39f451ede72582b9d969f0249769ed90e24a204
 MISC metadata.xml 312 RMD160 5d9cc87a75757e5eecdf006020538f38ca84ce65 SHA1 5a34cfccb600d05758fad3a395c9936483c2bde9 SHA256 496b704992e6a3a34d1a4ad6090b1e4e7d6c0f968e049f3f509f362f9eeef537
